--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,3 +17,11 @@ spring:
           temperature: 0.7
       embeddings:
         model: text-embedding-3-small
+    vectorstore:
+      mariadb:
+        initialize-schema: true
+        schema-validation: false
+        schema-name: chwimeet
+        table-name: vector_store
+        dimensions: 1536
+        distance-type: cosine
